--- a/login.html
+++ b/login.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Github</h1>
-    <a href="./login.html"></a>
+    <a href="./index.html"></a>
 </body>
 </html>
